fixed some alignment problem

--- a/deeva/static/css/arguments.css
+++ b/deeva/static/css/arguments.css
@@ -47,7 +47,7 @@
 
 .enable-assertions .glyphicon {
     font-size: 20px;
-    margin-right: 10px;
+    margin-right: 5px;
     float: left;
 }
 
