--- a/deeva/static/css/deeva.css
+++ b/deeva/static/css/deeva.css
@@ -64,6 +64,10 @@ body {
   margin-left: 50px;
 }
 
+#header row {
+  width: 100%;
+}
+
 #buttons_container {
   margin-top: 10px;
   margin-bottom: 10px;
