--- a/deeva/static/css/package.css
+++ b/deeva/static/css/package.css
@@ -14,6 +14,7 @@
     padding: 8px 15px;
     margin-bottom: 20px;
     text-align: center;
+    width: 175px;
 }
 
 .select-current-class > a.disabled {
